--- a/src/Pages/Upload/Upload.css
+++ b/src/Pages/Upload/Upload.css
@@ -89,5 +89,35 @@ color: #FFFFFF;
 
 
 }
-
-
+.container1{
+    margin-top: 0px;
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: space-between;
+    font-family: Figtree, sans-serif;
+    font-size: 24px;
+    font-weight: 600;
+    line-height: 32px;
+    letter-spacing: 0px;
+    text-align: left;
+}
+/* @media screen and (max-width: 767px) {
+    #container {
+            margin-top: 10px;
+    }
+} */
+.container1 img{
+  width: 100%;
+}
+#csv{
+  display: none;
+}
+@media screen and (max-width: 500px) {
+  .navs{
+    display: none;
+  }
+  #csv{
+    display: block;
+  }
+}
